Fixed problem with sidebar toggle buttons being moved by scrollbar

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -558,6 +558,10 @@ li.toctree-l4 > a {
 	border-bottom: 1px solid rgba(59, 59, 59, 0.0);
 }
 
+#globaltoc li.toctree-l1 a {
+  width: 360px;
+}
+
 #globaltoc li.toctree-l1 a:hover {
 	color: #0094ce;
 	background: rgba(255, 255, 255, 0.7);
